# handler/interaction.go
@@ -2,22 +2,22 @@ package handler
 
 import (
 	"context"
-	"github.com/douyin/kitex_gen/interaction"
-	"log"
 	"strconv"
+
+	"github.com/douyin/kitex_gen/interaction"
 
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary xxx
+// @Summary 用户点赞操作
 // @Schemes
-// @Description xxx
-// @Tags 互动接口1
+// @Description 登录用户对视频的点赞和取消点赞操作。
+// @Tags 互动接口
 // @Accept json
 // @Produce json
-// @Param request_body body interaction.FavoriteActionRequest true "request body"
+// @Param request_body query interaction.FavoriteActionRequest true "request body"
 // @Router /douyin/favorite/action/ [POST]
 func InteractionFavoriteAction(c *gin.Context) {
 
@@ -36,18 +36,19 @@ func InteractionFavoriteAction(c *gin.Context) {
 			"msg": resp.StatusMsg,
 			"err": err,
 		})
+		return
 	}
 	c.JSON(http.StatusOK, resp)
 
 }
 
-// @Summary xxx
+// @Summary 获取用户点赞列表
 // @Schemes
-// @Description xxx
+// @Description 登录用户的所有点赞视频。
 // @Tags 互动接口
 // @Accept json
 // @Produce json
-// @Param request_body body interaction.FavoriteListRequest true "request body"
+// @Param request_body query interaction.FavoriteListRequest true "request body"
 // @Router /douyin/favorite/list/ [GET]
 func InteractionFavoriteList(c *gin.Context) {
 	// userId := int64(c.GetUint("userID"))
@@ -60,7 +61,7 @@ func InteractionFavoriteList(c *gin.Context) {
 	}
 
 	resp, err := rpcCli.interactionCli.FavoriteList(context.Background(), req)
-	log.Printf("resp = %+v\n", resp)
+	// log.Printf("resp = %+v\n", resp)
 	if resp != nil && err != nil || resp.StatusCode != 0 {
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"msg": resp.StatusMsg,
@@ -71,13 +72,13 @@ func InteractionFavoriteList(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// @Summary xxx
+// @Summary 用户评论操作
 // @Schemes
-// @Description xxx
+// @Description 登录用户对视频进行评论。
 // @Tags 互动接口
 // @Accept json
 // @Produce json
-// @Param request_body body interaction.CommentActionRequest true "request body"
+// @Param request_body query interaction.CommentActionRequest true "request body"
 // @Router /douyin/comment/action/ [POST]
 func InteractionCommentAction(c *gin.Context) {
 
@@ -93,7 +94,6 @@ func InteractionCommentAction(c *gin.Context) {
 		CommentText: &commentText,
 		CommentId:   &commentId,
 	}
-
 	resp, err := rpcCli.interactionCli.CommentAction(context.Background(), req)
 	if err != nil || resp.StatusCode != 0 {
 		c.JSON(http.StatusInternalServerError, gin.H{
@@ -104,13 +104,13 @@ func InteractionCommentAction(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// @Summary xxx
+// @Summary 获取视频评论
 // @Schemes
-// @Description xxx
+// @Description 查看视频的所有评论，按发布时间倒序。
 // @Tags 互动接口
 // @Accept json
 // @Produce json
-// @Param request_body body interaction.CommentListRequest true "request body"
+// @Param request_body query interaction.CommentListRequest true "request body"
 // @Router /douyin/comment/list/ [GET]
 func InteractionCommentList(c *gin.Context) {
 
